--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "axios": "^1.7.2",
+    "apexcharts": "^3.35.0",
+    "framer-motion": "^6.2.9",
     "boxicons": "^2.1.4",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.0",
