implemented session middleware working fine

--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,14 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7"
+    "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7",
+    "otp-generator": "^4.0.1"
   }
 }
