--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "connect-mongodb-session": "^5.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
