--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,11 @@
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
-    "axios": "^1.7.2",
+    "@reduxjs/toolkit": "^2.3.0",
     "apexcharts": "^3.35.0",
-    "framer-motion": "^6.2.9",
+    "axios": "^1.7.2",
     "boxicons": "^2.1.4",
+    "framer-motion": "^6.2.9",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.0.4",
