--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1"
