--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,18 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@iconscout/react-unicons": "^2.0.2",
-    "@mui/icons-material": "^5.16.4",
-    "@mui/material": "^5.16.4",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^7.22.0",
     "@reduxjs/toolkit": "^2.3.0",
     "apexcharts": "^3.35.0",
     "axios": "^1.7.2",
     "boxicons": "^2.1.4",
+    "dayjs": "^1.11.13",
     "framer-motion": "^6.2.9",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.0",
+    "react-calendar": "^5.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
