--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@mui/x-charts": "^7.22.1",
     "@mui/x-date-pickers": "^7.22.0",
     "@reduxjs/toolkit": "^2.3.0",
     "apexcharts": "^3.35.0",
