--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
