--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1"
