--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.2",
     "boxicons": "^2.1.4",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
     "framer-motion": "^6.2.9",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.0",
