--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.10.0",
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
@@ -29,12 +30,14 @@
     "react-calendar": "^5.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.0",
     "scrollreveal": "^4.0.9",
     "swiper": "^11.1.5",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
